--- a/ScriptPluginLoader.Compiler/ScriptPluginLoader.Compiler.csproj
+++ b/ScriptPluginLoader.Compiler/ScriptPluginLoader.Compiler.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\Common.props" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net471</TargetFramework>
+    <OutputPath>$(OutputPath)Tools\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\ScriptPluginLoader.Common\**\*.cs" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
   </ItemGroup>
 </Project>
