Make use of new GpkEnvironment class

--- a/ScriptPluginLoader.Plugin/ScriptPluginLoader.Plugin.csproj
+++ b/ScriptPluginLoader.Plugin/ScriptPluginLoader.Plugin.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <Compile Include="..\ScriptPluginLoader.Common\**\*.cs" />
-    <PackageReference Include="GamePluginKit.API" Version="*" />
+    <PackageReference Include="GamePluginKit.API" Version="2.1.0" />
     <Reference Include="UnityEngine" Private="False">
       <HintPath>$(UnityEditorDir)\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
