Change AssemblyName for ScriptPluginLoader.Plugin

--- a/ScriptPluginLoader.Plugin/ScriptPluginLoader.Plugin.csproj
+++ b/ScriptPluginLoader.Plugin/ScriptPluginLoader.Plugin.csproj
@@ -2,6 +2,7 @@
   <Import Project="..\Common.props" />
 
   <PropertyGroup>
+    <AssemblyName>ScriptPluginLoader</AssemblyName>
     <OutputType>Library</OutputType>
     <TargetFramework>net35</TargetFramework>
     <FrameworkPathOverride>$(UnityEditorDir)\Data\Mono\lib\mono\unity</FrameworkPathOverride>
