--- a/CSharpPluginLoader.Plugin/CSharpPluginLoader.Plugin.csproj
+++ b/CSharpPluginLoader.Plugin/CSharpPluginLoader.Plugin.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\Common.props" />
 
   <PropertyGroup>
-    <AssemblyName>ScriptPluginLoader</AssemblyName>
+    <AssemblyName>CSharpPluginLoader</AssemblyName>
     <OutputType>Library</OutputType>
     <TargetFramework>net35</TargetFramework>
     <FrameworkPathOverride>$(UnityEditorDir)\Data\Mono\lib\mono\unity</FrameworkPathOverride>
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\ScriptPluginLoader.Common\**\*.cs" />
+    <Compile Include="..\CSharpPluginLoader.Common\**\*.cs" />
     <PackageReference Include="GamePluginKit.API" Version="2.1.0" />
     <Reference Include="UnityEngine" Private="False">
       <HintPath>$(UnityEditorDir)\Data\Managed\UnityEngine.dll</HintPath>
